option to use local folder instead of sftp